<?xml version="1.0"?>
<package>
  <name>sf30_node</name>
  <version>0.0.0</version>
  <description>The sf30_node package provides a driver for the sf30 laser range finder. </description>

  
  <maintainer email="gpereira@ufmg.br">Guilherme Pereira</maintainer>

  <url type="website">http://ros.org/wiki/sf30_node</url>

  <author>Guilherme Pereira</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>